Setup for logo in header

--- a/styles/base.css
+++ b/styles/base.css
@@ -3,7 +3,7 @@
 	/* Layout */
 	--page-width: 1200px;
 	--content-padding: 2rem;
-	--logo-width: 200px;
+	--logo-width: 300px;
 
 	/* Typography */
 	--heading-text-size: 24pt;
@@ -46,7 +46,7 @@ body {
 }
 
 #logo {
-	margin: auto;
+	margin: 2rem;
 }
 
 #logo img {
@@ -69,6 +69,10 @@ h2 {
 	font-weight: 400;
 	font-size: 18pt;
 	box-shadow: var(--shadow);
+}
+
+.letterhead {
+	justify-content: center;
 }
 
 .letterhead svg {
@@ -175,6 +179,10 @@ footer {
 
 	.letterhead {
 		justify-content: center;
+	}
+
+	#logo img {
+		max-width: calc(var(--logo-width) - calc(var(--logo-width) / 2));
 	}
 
 	#Home {
