--- a/styles/base.css
+++ b/styles/base.css
@@ -135,6 +135,7 @@ img {
 	border-radius: 32px;
 	box-shadow: var(--shadow);
 	background-color: var(--background-colour-light);
+	margin: 1rem auto;
 }
 
 #article img,
