Quick fix for link colours in h2 elements

--- a/styles/base.css
+++ b/styles/base.css
@@ -73,6 +73,10 @@ h2 {
 	box-shadow: var(--shadow);
 }
 
+h2 a {
+	color: var(--background-colour);
+}
+
 .letterhead {
 	justify-content: center;
 }
