--- a/styles/base.css
+++ b/styles/base.css
@@ -6,6 +6,7 @@
 	--logo-width: 400px;
 
 	/* Typography */
+	--main-font-family: 'Fira Code', novel-mono-pro, monospace;
 	--heading-text-size: 24pt;
 	--menu-item-size: 18pt;
 	--text-size: 14pt;
@@ -35,8 +36,7 @@ html {
 }
 
 body {
-	font-family: 'Fira Code', novel-mono-pro, monospace;
-	background-color: var(--background-colour);
+	font-family: var(--main-font-family) background-color: var(--background-colour);
 	color: var(--text-colour);
 	font-size: var(--text-size);
 	font-weight: 100;
