--- a/styles/base.css
+++ b/styles/base.css
@@ -56,11 +56,19 @@ body {
 	box-shadow: none;
 }
 
+div.tickers {
+	z-index: 1;
+	display: flex;
+	justify-content: space-between;
+	background: url(/images/cutsceneborder.png);
+}
+
 div.page-width {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	min-height: inherit;
+	z-index: 2;
 }
 
 h1,
